<resources>
    <string name="app_name">Mini-Drive</string>
    <string name="API_URL">http://35.188.6.128:4000</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <string name="title_activity_file_view">FileViewActivity</string>
    <string name="email">Email</string>
    <string name="signUp">Sign Up</string>
    <string name="signIn">Sign In</string>
    <string name="signOut">Sign Out</string>
    <string name="files">Files</string>
    <string name="newFile">New file</string>
    <string name="categories">Categories</string>
    <string name="addCategory">Add category</string>
    <string name="share">Share</string>
    <string name="sortBy">Sort by</string>
    <string name="title_activity_share">ShareActivity</string>
    <string name="title_activity_categories">CategoriesActivity</string>
    <string name="delete_category">Are you sure to delete this category?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="sharedFiles">Shared files</string>
</resources>
