<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ii.a2017.arqsoft.minidrive.com.mini_drive.MainMenuActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/files"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/categories"
        tools:layout_editor_absoluteX="16dp"
        android:layout_marginTop="169dp"
        app:layout_constraintTop_toBottomOf="@+id/filesListView" />

    <Button
        android:id="@+id/signOutMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signOut"
        app:layout_constraintLeft_toRightOf="@+id/filesListView"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.68"
        tools:layout_editor_absoluteY="72dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <Button
        android:id="@+id/newFileButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newFile"
        app:layout_constraintLeft_toRightOf="@+id/filesListView"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/signOutMain"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.68"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="327dp"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/textView3">

        <LinearLayout
            android:id="@+id/showCategoriesLinearLayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal" />

    </HorizontalScrollView>

    <ListView
        android:id="@+id/filesListView"
        android:layout_width="268dp"
        android:layout_height="281dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

</android.support.constraint.ConstraintLayout>
